--- a/ws/src/main/resources/ValidationMessages_tr.properties
+++ b/ws/src/main/resources/ValidationMessages_tr.properties
@@ -1,3 +1,4 @@
 hoaxify.constraint.username.NotNull.message = Kullan\u0131c\u0131 ad\u0131 bo\u015F b\u0131rak\u0131lamaz.
 hoaxify.constraint.password.Pattern.message = \u015Eifrenizde en az 1 b\u00fcy\u00fck harf, 1 k\u00fc\u00e7\u00fck harf ve bir say\u0131 olmak zorundad\u0131r.
 hoaxify.constraint.username.Unique.message = Bu kullan\u0131c\u0131 ad\u0131 kullan\u0131l\u0131yor
+hoaxify.constraint.FileType.message = Desteklenmeyen dosya tipi. Sadece {types} dosyalar\u0131 kullan\u0131labilir.
